services/databases/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: postgresql
  namespace: infra
spec:
  rules:
    - host: db.ocelotspot.com
      http:
        paths:
          backend:
            service:
              name: postgresql
              port:
                number: 5432
          pathType: ImplementationSpecific
  tls:
    - hosts:
        - db.ocelotspot.com
      secretName: tls-postgresql-ingress
